Fixed skill bar rounded corners and appearance on mobile

--- a/app/components/normal-scroll/style.scss
+++ b/app/components/normal-scroll/style.scss
@@ -60,12 +60,12 @@
 
   // Secondary light
   .light-scrollbar::-webkit-scrollbar-thumb, .light-scrollbar::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(#626D98,0.44);
+    background: rgba(#677198,0.44);
   }
 
   // Secondary dark
   .dark-scrollbar::-webkit-scrollbar-thumb, .dark-scrollbar::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(#626D98,0.33);
+    background: rgba(#677198,0.33);
   }
   
 //}
